--- a/ui/requisitions_report/view/Requisition.view.xml
+++ b/ui/requisitions_report/view/Requisition.view.xml
@@ -3,43 +3,31 @@
 	controllerName="requisitions_report.controller.Requisition"
 	xmlns:layout="sap.ui.layout" xmlns:common="iacube.ui.common" xmlns:mc="sap.suite.ui.microchart"
 	xmlns:html="http://www.w3.org/1999/xhtml">
-	<Page title="Job Requisition">
+	<Page showNavButton="true" navButtonPress="onNavBack"
+		title="{i18n>req.detail.page.title} ({ui>/selectedRequisitionIndex} {i18n>req.detail.page.from} {= ${ui>/requisitions}.length })">
 		<content>
 			<uxap:ObjectPageLayout id="detObj"
 				showTitleInHeaderContent="false">
 				<uxap:headerTitle>
-					<uxap:ObjectPageHeader objectTitle="{ui>Title} ({ui>ReqId})">
+					<uxap:ObjectPageHeader objectTitle="{ui>Title} ({ui>ReqId})"
+						class="objHeaderPaddings">
 						<uxap:breadCrumbsLinks>
-							<Link text="Job Requisitions Report: by Status" press="handleLink1Press" />
+							<Link text="{i18n>req.detail.page.breadcrumps}" press="handleBreadcrumps" />
 						</uxap:breadCrumbsLinks>
 					</uxap:ObjectPageHeader>
 				</uxap:headerTitle>
-<!-- 				<uxap:headerContent>
-					<layout:VerticalLayout width="5%"></layout:VerticalLayout>
-					<layout:VerticalLayout>
-						<ObjectStatus title="{i18n>req.detail.location}"
-							text="{ui>Location}" />
-						<ObjectStatus title="{i18n>req.detail.project}" text="{ui>ProjectId}" />
-					</layout:VerticalLayout>
-					<layout:VerticalLayout width="40%"></layout:VerticalLayout>
-					<layout:VerticalLayout>
-						<ObjectStatus title="{i18n>req.detail.created}" text="{ui>CreatedAt}" />
-						<FlexBox alignContent="End" justifyContent="End">
-							<ObjectStatus text="{ui>StatusCodeId}" state="Success" />
-						</FlexBox>
-						<layout:VerticalLayout></layout:VerticalLayout>
-						<FlexBox alignContent="End" justifyContent="End">
-							<Select></Select>
-						</FlexBox>
-					</layout:VerticalLayout>
-				</uxap:headerContent> -->
+				<uxap:headerContent>
+					<ObjectStatus
+						text="{model: 'ui', path: 'StatusCodeId', formatter: '.formatter.formatReqStatus'}"
+						state="{model: 'ui', path: 'StatusCodeId', formatter: '.formatter.formatReqState'}" />
+				</uxap:headerContent>
 				<uxap:sections>
 					<uxap:ObjectPageSection id="detInfo"
 						title="{i18n>req.detail.info}" titleUppercase="false">
 						<uxap:subSections>
 							<uxap:ObjectPageSubSection title="">
 								<uxap:blocks>
-									<common:InfoForm formEditable="false"/>
+									<common:InfoForm formEditable="false" />
 								</uxap:blocks>
 							</uxap:ObjectPageSubSection>
 						</uxap:subSections>
@@ -49,59 +37,66 @@
 						<uxap:subSections>
 							<uxap:ObjectPageSubSection title="{i18n>req.detail.skills}">
 								<uxap:blocks>
-									<common:SkillsTable/>
+									<common:SkillsTable />
 								</uxap:blocks>
 							</uxap:ObjectPageSubSection>
 						</uxap:subSections>
 					</uxap:ObjectPageSection>
-					<uxap:ObjectPageSection id="detCandidates" title="{i18n>candidates}" 
-						titleUppercase="false">
+					<uxap:ObjectPageSection id="detCandidates"
+						title="{i18n>req.detail.candidates}" titleUppercase="false">
 						<uxap:subSections>
-							<uxap:ObjectPageSubSection title="">
-								<uxap:blocks> 
-									<Table id="idCandidates" items="{ui>candidates}">
+							<uxap:ObjectPageSubSection>
+								<uxap:blocks>
+									<Table id="req_details_cand_table" items="{ui>candidates}">
 										<columns>
 											<Column hAlign="Left">
-												<Text text="{i18n>cand.tab.firstName}"/>
 											</Column>
 											<Column hAlign="Left">
-												<Text text="{i18n>cand.tab.lastName}"/>
+												<Text text="{i18n>cand.tab.firstName}" />
 											</Column>
 											<Column hAlign="Left">
-												<Text text="{i18n>cand.tab.experience}"/>
+												<Text text="{i18n>cand.tab.lastName}" />
 											</Column>
 											<Column hAlign="Left">
-												<Text text="{i18n>cand.tab.link}"/>
+												<Text text="{i18n>cand.tab.experience}" />
 											</Column>
 											<Column hAlign="Left">
-												<Text text="{i18n>cand.tab.overDist}"/>
+												<Text text="{i18n>cand.tab.link}" />
 											</Column>
 											<Column hAlign="Left">
-												<Text text="{i18n>cand.tab.status}"/>
+												<Text text="{i18n>cand.tab.overDist}" />
 											</Column>
 											<Column hAlign="Left">
-												<Text text="{i18n>cand.tab.lastChanges}"/>
+												<Text text="{i18n>cand.tab.status}" />
+											</Column>
+											<Column hAlign="Left">
+												<Text text="{i18n>cand.tab.lastChanges}" />
 											</Column>
 										</columns>
 										<items>
-											<ColumnListItem type="Navigation">
+											<ColumnListItem type="Navigation" press="onCandidatePress">
 												<cells>
-													<Text text="{ui>FirstName}"/>
-													<Text text="{ui>LastName}"/>
-													<Text text="{ui>Experience}"/>
-													<core:Icon src="sap-icon://globe"
-															   color="#6495ED"
-															   press="handleIconPress"/>
-													<ProgressIndicator percentValue="{ui>Distance}" showValue="true" 
-											          state="Success" height="1.5rem" width="80%" displayValue="{ui>Distance} %"/>
-											        <ObjectStatus text="{ui>StatusId}" state="Success" />
-											        <Text text="{model: 'ui', path: 'ChangedAt', type:'sap.ui.model.type.Date', formatOptions: {style:'medium'}}"/> 
+													<Image src="{ui>Photo}" />
+													<Text text="{ui>FirstName}" />
+													<Text text="{ui>LastName}" />
+													<Text text="{ui>Experience}" />
+													<core:Icon src="sap-icon://globe" color="#6495ED"
+														press="onProfilesPopover" />
+													<ProgressIndicator percentValue="{ui>Distance}"
+														showValue="true"
+														state="{model:'ui', path:'Distance', formatter:'.formatter.formatDistanceState'}"
+														height="1.5rem" width="80%" displayValue="{ui>Distance} %" />
+													<ObjectStatus
+														text="{ model:'ui', path:'StatusId', formatter: '.formatter.formatCandStatusText'}"
+														state="{ model:'ui', path: 'StatusId', formatter: '.formatter.formatCandStatusState'}" />
+													<Text
+														text="{model: 'ui', path: 'ChangedAt', type:'sap.ui.model.type.Date', formatOptions: {style:'medium'}}" />
 												</cells>
 											</ColumnListItem>
 										</items>
 									</Table>
 								</uxap:blocks>
-							</uxap:ObjectPageSubSection> 
+							</uxap:ObjectPageSubSection>
 						</uxap:subSections>
 					</uxap:ObjectPageSection>
 				</uxap:sections>
