--- a/ui/requisitions_report/view/RequisitionsOverview.view.xml
+++ b/ui/requisitions_report/view/RequisitionsOverview.view.xml
@@ -2,7 +2,7 @@
 	xmlns="sap.m" xmlns:fb="sap.ui.comp.filterbar"
 	controllerName="requisitions_report.controller.RequisitionsOverview"
 	xmlns:html="http://www.w3.org/1999/xhtml">
-	<Page title="Job Requisitions Report" id="page1">
+	<Page title="{i18n>req.page.title}" id="req_overview_page">
 		<content>
 			<fb:FilterBar reset="onReset" search="onSearch"
 				showRestoreButton="true" showClearButton="true" useToolbar="true"
@@ -87,11 +87,11 @@
 								<Text text="{ui>SubcategoryName}" />
 								<Text text="{ui>CreatedBy}" />
 								<Text
-									text="{model: 'ui', path: 'CreatedAt', type:'sap.ui.model.type.DateTime', formatOptions: {pattern:'dd/MM/yyyy hh:mm'}}" />
+									text="{model: 'ui', path: 'CreatedAt', type:'sap.ui.model.type.DateTime', formatOptions: {pattern:'dd/MM/yyyy HH:mm'}}" />
 								<Text text="{ui>DaysRemain}" />
 								<ObjectStatus
 									text="{model: 'ui', path: 'StatusCodeId', formatter: '.formatter.formatReqStatus'}"
-									state="Success" />
+									state="{model: 'ui', path: 'StatusCodeId', formatter: '.formatter.formatReqState'}" />
 								<HBox>
 									<core:Icon visible="{= ${ui>candidates}.length > 0}"
 										src="sap-icon://employee" press="onShowCandPopover" />
