--- a/ui/requisitions_report/view/CandidatesOverview.view.xml
+++ b/ui/requisitions_report/view/CandidatesOverview.view.xml
@@ -2,45 +2,28 @@
 	xmlns="sap.m" xmlns:fb="sap.ui.comp.filterbar"
 	controllerName="requisitions_report.controller.CandidatesOverview"
 	xmlns:html="http://www.w3.org/1999/xhtml">
-	<Page showNavButton="true" navButtonPress="onNavBack" title="{i18n>cand.overview.page.title} {ui>/selectedRequisitionTitle}" id="page1">
+	<Page showNavButton="true" navButtonPress="onNavBack"
+		title="{i18n>cand.overview.page.title} {ui>/selectedRequisitionTitle}"
+		id="page1">
 		<content>
-			<fb:FilterBar reset="onReset" search="onSearch"
-				showRestoreButton="true" showClearButton="true" useToolbar="true"
-				id="req_fb">
-
-				<fb:filterItems>
-					<fb:FilterItem name="req_id" label="{i18n>req.table.id}">
-						<fb:control>
-							<Input type="Text" />
-						</fb:control>
-					</fb:FilterItem>
-					<fb:FilterItem name="req_name" label="{i18n>req.table.name}">
-						<fb:control>
-							<Input type="Text" />
-						</fb:control>
-					</fb:FilterItem>
-					<fb:FilterItem name="req_account" label="{i18n>req.table.account}">
-						<fb:control>
-							<Input type="Text" />
-						</fb:control>
-					</fb:FilterItem>
-					<fb:FilterItem name="req_subcategory" label="{i18n>req.table.subcategory}">
-						<fb:control>
-							<Input type="Text" />
-						</fb:control>
-					</fb:FilterItem>
-					<fb:FilterItem name="req_status" label="{i18n>req.table.status}">
-						<fb:control>
-							<Input type="Text" />
-						</fb:control>
-					</fb:FilterItem>
-				</fb:filterItems>
-			</fb:FilterBar>
+			<ObjectHeader title="{ui>Title}" intro="{ui>Location}"
+				responsive="true" fullScreenOptimized="true">
+				<statuses>
+					<ObjectStatus
+						text="{model: 'ui', path: 'StatusCodeId', formatter: '.formatter.formatReqStatus'}"
+						state="{model: 'ui', path: 'StatusCodeId', formatter: '.formatter.formatReqState'}" />
+				</statuses>
+				<attributes>
+					<ObjectAttribute text="{ui>ProjectId}" />
+				</attributes>
+			</ObjectHeader>
 			<VBox class="sapUiSmallMargin">
 				<Table id="req_report_candidatesTable" inset="false" items="{ui>candidates}">
 					<headerToolbar>
 						<Toolbar>
-							<Title text="{i18n>cand.overview.tab.header} ({= ${ui>candidates}.length})" level="H2" />
+							<Title
+								text="{i18n>cand.overview.tab.header} ({= ${ui>candidates}.length})"
+								level="H2" />
 						</Toolbar>
 					</headerToolbar>
 					<columns>
@@ -62,9 +45,7 @@
 						<Column>
 							<Text text="{i18n>cand.overview.tab.suitability}" />
 						</Column>
-<!-- 						<Column>
-							<Text text="{i18n>cand.overview.tab.salary}" />
-						</Column> -->
+<!-- <Column> <Text text="{i18n>cand.overview.tab.salary}" /> </Column> -->
 						<Column width="8%">
 							<Text text="{i18n>cand.overview.tab.reqs}" />
 						</Column>
@@ -72,25 +53,24 @@
 					<items>
 						<ColumnListItem type="Navigation" press="onCandidatePress">
 							<cells>
-								<CheckBox selected="{ui>selected}"/>
+								<CheckBox selected="{ui>selected}" />
 								<Text text="{ui>FirstName}" />
 								<Text text="{ui>LastName}" />
 								<Text text="{ui>Location}" />
-								<core:Icon src="sap-icon://globe" color="#6495ED" press="onProfilesPopover"/>
-								<ProgressIndicator percentValue="{ui>Distance}" showValue="true" 
-									state="{model:'ui', path:'Distance', formatter:'.formatter.formatDistanceState'}" height="1.5rem" width="80%" displayValue="{ui>Distance} %"/>
-<!--								<ObjectNumber
- 												class="sapUiSmallMarginBottom"
-												number="{
-														model: 'ui',
-														path: 'salary',
-														formatter: '.formatter.formatSalary'
-													}"
-												unit="{ui>CurrencyCode}" /> -->
+								<core:Icon src="sap-icon://globe" color="#6495ED"
+									press="onProfilesPopover" />
+								<ProgressIndicator percentValue="{ui>Distance}"
+									showValue="true"
+									state="{model:'ui', path:'Distance', formatter:'.formatter.formatDistanceState'}"
+									height="1.5rem" width="80%" displayValue="{ui>Distance} %" />
+								<!-- <ObjectNumber class="sapUiSmallMarginBottom" number="{ model: 
+									'ui', path: 'salary', formatter: '.formatter.formatSalary' }" unit="{ui>CurrencyCode}" 
+									/> -->
 								<HBox>
-									<core:Icon visible="{= ${ui>requisitions}.length > 0}" src="sap-icon://document" press="onShowRequisPopover"/>
-									<Text text="({= ${ui>requisitions}.length})" class="sapUiTinyMarginBeginEnd"/>
-								</HBox>								
+									<core:Icon visible="{= ${ui>requisitions}.length > 0}"
+										src="sap-icon://document" press="onShowRequisPopover" />
+									<Text text="({= ${ui>requisitions}.length})" class="sapUiTinyMarginBeginEnd" />
+								</HBox>
 							</cells>
 						</ColumnListItem>
 					</items>
@@ -100,7 +80,8 @@
 		<footer>
 			<Toolbar>
 				<ToolbarSpacer />
-				<Button text="{i18n>cand.overview.footer.button}" type="Emphasized" press="onAssignCandidates" />
+				<Button text="{i18n>cand.overview.footer.button}" type="Emphasized"
+					press="onAssignCandidates" />
 			</Toolbar>
 		</footer>
 	</Page>
