--- a/ui/candidates_search/view/CandidatesOverview.view.xml
+++ b/ui/candidates_search/view/CandidatesOverview.view.xml
@@ -29,8 +29,8 @@
 			<VBox class="sapUiSmallMargin">
 				<Table id="idCandidates" items="{ui>/candidates}" selectionMode="MultiToggle" headerText="{i18n>candidates} ({ui>/candidates/length})" visible="false"  >
 						<columns>
-							<Column width="30px" hAlign="Right"></Column>
-							<Column hAlign="Left">
+							<Column width="30px" hAlign="left"></Column>
+							<Column hAlign="left">
 								<Text text="{i18n>cand.table.fname}"/>
 							</Column>
 							<Column hAlign="Left">
@@ -41,9 +41,6 @@
 							</Column>
 							<Column hAlign="Left">
 								<Text text="{i18n>cand.table.website}"/>
-							</Column>
-							<Column hAlign="Left">
-								<Text text="{i18n>cand.table.rating}"/>
 							</Column>
 							<Column hAlign="Left">
 								<Text text="{i18n>cand.table.job_req}"/>
@@ -57,8 +54,6 @@
 									<Text text="{ui>LastName}"/>
 									<Text text="{ui>Location}"/>
 									<core:Icon src="sap-icon://globe" color="#6495ED" size="2rem" press="onIconPress"/>
-									<ProgressIndicator  showValue="true" 
-														 displayValue="100%"/>
 									<HBox>	
 										<core:Icon visible="{= ${ui>requisitions}.length > 0}" src="sap-icon://document" press="onRequisPress" />
 										<Text text="({= ${ui>requisitions}.length})" class="sapUiTinyMarginBeginEnd"/>
