--- a/ui/requisitions_report/view/CandidatesOverview.view.xml
+++ b/ui/requisitions_report/view/CandidatesOverview.view.xml
@@ -67,9 +67,9 @@
 									'ui', path: 'salary', formatter: '.formatter.formatSalary' }" unit="{ui>CurrencyCode}" 
 									/> -->
 								<HBox>
-									<core:Icon visible="{= ${ui>requisitions}.length > 0}"
+									<core:Icon visible="{= ${ui>requis}.length > 0}"
 										src="sap-icon://document" press="onShowRequisPopover" />
-									<Text text="({= ${ui>requisitions}.length})" class="sapUiTinyMarginBeginEnd" />
+									<Text text="({= ${ui>requis}.length})" class="sapUiTinyMarginBeginEnd" />
 								</HBox>
 							</cells>
 						</ColumnListItem>
